test/files/neg/macro-keyword-package2.scala
package foo

package macro.foo
